--- a/flirtrixreact/src/css/style.css
+++ b/flirtrixreact/src/css/style.css
@@ -120,12 +120,15 @@ ul {
 
 header {
   gap: 1rem;
-  padding-left: 8rem;
+  padding-left: 6rem;
   padding-top: 4rem;
   padding-bottom: 4rem;
-  background-color: #ff7979;
+  background-color: #FEDE00;
   color: #dff9fb;
-  font-size: 2rem;
+  font-size: 1rem;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #0000CC;
 }
 
 h1 {
